--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -15,7 +15,7 @@ jobs:
   terraform-plan:
     name: 'Terraform-plan'
     runs-on: ubuntu-latest
-    environment: production
+    environment: test
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
@@ -87,6 +87,6 @@ jobs:
     - name: Terraform Apply
       run: echo "running terraform apply"
       # run: terraform apply -auto-approve -input=false
-      working-directory: ./Terraform
+#       working-directory: ./Terraform
 
 
